[1079] Ensure scrollable tables have full width & add tests
- add styling to address scrollable tables header/column
  misalignment (see https://datatables.net/manual/tech-notes/6 and
  https://datatables.net/forums/discussion/42659/table-header-width-not-aligned-with-body-width)
- started adding tests for the jQuery functionality in app/javascript/src/dashboard.js

Resolves: 1079

--- a/app/javascript/src/stylesheets/pages/case_contacts.scss
+++ b/app/javascript/src/stylesheets/pages/case_contacts.scss
@@ -28,6 +28,6 @@ legend {
 }
 
 .dataTables_scrollHeadInner,
-.case-contacts-table {
+.dataTables_scroll table {
   width: 100% !important;
 }
